feat: add new styles
